--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
 opencv-python==4.8.1.78
-dlib==19.24.2
+mediapipe==0.10.8
 numpy==1.24.3
 pandas==2.1.3
 scikit-learn==1.3.2
