--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,6 +9,13 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml application/javascript;
     gzip_disable "MSIE [1-6]\.";
 
+    # Health check path
+    location = / {
+        root /usr/share/nginx/html;
+        try_files /health.html /index.html =200;
+    }
+
+    # Main location
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
