--- a/backend/Dockerfile.minimal
+++ b/backend/Dockerfile.minimal
@@ -11,9 +11,10 @@ COPY main_minimal.py main.py
 # Set environment variables
 ENV PORT=5000
 ENV PYTHONUNBUFFERED=1
+ENV HOST=0.0.0.0
 
 # Expose port
 EXPOSE 5000
 
-# Simple startup command
+# Simple startup command - EXPLICITLY using 0.0.0.0
 CMD uvicorn main:app --host 0.0.0.0 --port 5000 
