--- a/frontend/Dockerfile.minimal
+++ b/frontend/Dockerfile.minimal
@@ -3,11 +3,29 @@ FROM nginx:alpine
 # Create a simple health check HTML file
 RUN echo '<!DOCTYPE html><html><head><title>Health Check</title></head><body><h1>Frontend Service Health Check</h1><p>Status: OK</p></body></html>' > /usr/share/nginx/html/index.html
 
-# Create a simple nginx config
-RUN echo 'server { listen 80; location / { root /usr/share/nginx/html; } }' > /etc/nginx/conf.d/default.conf
+# Create a more explicit nginx config that binds to all interfaces
+RUN echo 'server { \
+    listen 80 default_server; \
+    listen [::]:80 default_server; \
+    server_name _; \
+    location / { \
+        root /usr/share/nginx/html; \
+        index index.html; \
+    } \
+    location /health { \
+        return 200 "ok"; \
+    } \
+}' > /etc/nginx/conf.d/default.conf
+
+# Install curl for healthcheck
+RUN apk --no-cache add curl
+
+# Add healthcheck
+HEALTHCHECK --interval=5s --timeout=3s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:80/ || exit 1
 
 # Expose port
 EXPOSE 80
 
-# Start nginx
+# Start nginx with debug mode to see more logs
 CMD ["nginx", "-g", "daemon off;"] 
