--- a/backend/Dockerfile.minimal
+++ b/backend/Dockerfile.minimal
@@ -17,4 +17,4 @@ ENV HOST=0.0.0.0
 EXPOSE 5000
 
 # Simple startup command - EXPLICITLY using 0.0.0.0
-CMD uvicorn main:app --host 0.0.0.0 --port 5000 --host "::"
+CMD uvicorn main:app --host "::" --port 5000 
