--- a/backend/Dockerfile.minimal
+++ b/backend/Dockerfile.minimal
@@ -3,7 +3,7 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # Only install minimal dependencies
-RUN pip install --no-cache-dir fastapi uvicorn
+RUN pip install --no-cache-dir fastapi uvicorn ipv6-addr
 
 # Copy only the minimal application
 COPY main_minimal.py main.py
@@ -11,10 +11,11 @@ COPY main_minimal.py main.py
 # Set environment variables
 ENV PORT=5000
 ENV PYTHONUNBUFFERED=1
-ENV HOST=0.0.0.0
+ENV HOST="::"
 
-# Expose port
-EXPOSE 5000
- 
-# Simple startup command - EXPLICITLY using 0.0.0.0
+# Expose port (both IPv4 and IPv6)
+EXPOSE 5000/tcp
+EXPOSE 5000/tcp ipv6
+
+# Simple startup command - EXPLICITLY using IPv6 dual-stack
 CMD uvicorn main:app --host "::" --port 5000 
