--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,10 +12,10 @@ RUN npm ci
 COPY . .
 
 # Set environment variables with defaults
-ARG BACKEND_URL=http://localhost:5000
+ARG BACKEND_URL=http://facemap
 ENV REACT_APP_API_URL=${BACKEND_URL}
 
-# Build the app using railway script
+# Build the app
 RUN echo "Building with API URL: $REACT_APP_API_URL" && \
     npm run build
 
@@ -28,15 +28,34 @@ RUN apk --no-cache add curl
 # Copy built assets from the build stage
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Copy custom nginx config if you need specific routing for SPA
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Create a more robust nginx config with IPv6 support
+RUN echo 'server { \
+    listen 80 default_server; \
+    listen [::]:80 default_server; \
+    server_name _; \
+    location / { \
+        root /usr/share/nginx/html; \
+        index index.html; \
+        try_files $uri $uri/ /index.html; \
+    } \
+    location /health { \
+        access_log off; \
+        return 200 "ok"; \
+    } \
+    # Cache static assets \
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ { \
+        root /usr/share/nginx/html; \
+        expires 30d; \
+        add_header Cache-Control "public, no-transform"; \
+    } \
+}' > /etc/nginx/conf.d/default.conf
 
 # Add healthcheck
-HEALTHCHECK --interval=10s --timeout=5s --start-period=10s --retries=3 \
-  CMD curl -f http://localhost:80/ || exit 1
+HEALTHCHECK --interval=5s --timeout=3s --start-period=10s --retries=3 \
+  CMD curl -f http://localhost:80/health || exit 1
 
 # Expose port
 EXPOSE 80
 
 # Start nginx
-CMD ["nginx", "-g", "daemon off;"] 
+CMD ["nginx", "-g", "daemon off;"]
