--- a/railway.config.frontend.json
+++ b/railway.config.frontend.json
@@ -7,10 +7,11 @@
     "restartPolicyType": "ON_FAILURE",
     "restartPolicyMaxRetries": 10,
     "numReplicas": 1,
-    "healthcheckPath": "/",
+    "healthcheckPath": "/health",
     "healthcheckTimeout": 30,
     "healthcheckInterval": 5,
     "healthcheckRetries": 3,
-    "port": 80
+    "port": 80,
+    "ipv6": true
   }
 } 
