--- a/railway.config.json
+++ b/railway.config.json
@@ -7,11 +7,12 @@
     "restartPolicyType": "ON_FAILURE",
     "restartPolicyMaxRetries": 10,
     "numReplicas": 1,
-    "startCommand": "uvicorn main:app --host 0.0.0.0 --port 5000",
+    "startCommand": "uvicorn main:app --host '::' --port 5000",
     "healthcheckPath": "/",
     "healthcheckTimeout": 30,
     "healthcheckInterval": 5,
     "healthcheckRetries": 3,
-    "port": 5000
+    "port": 5000,
+    "ipv6": true
   }
 } 
