--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,9 +11,9 @@ RUN npm ci
 # Copy the rest of the code
 COPY . .
 
-# Set environment variables with defaults
-ARG BACKEND_URL=https://facemap
-ENV REACT_APP_API_URL=${BACKEND_URL}
+# Set default environment variable
+ARG REACT_APP_API_URL=http://facemap.railway.internal:5000
+ENV REACT_APP_API_URL=${REACT_APP_API_URL}
 
 # Build the app
 RUN echo "Building with API URL: $REACT_APP_API_URL" && \
@@ -22,39 +22,27 @@ RUN echo "Building with API URL: $REACT_APP_API_URL" && \
 # Production environment
 FROM nginx:alpine
 
-# Install curl for healthcheck
-RUN apk --no-cache add curl
-
 # Copy built assets from the build stage
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Create a more robust nginx config with IPv6 support
-RUN echo 'server { \
-    listen 80 default_server; \
-    listen [::]:80 default_server; \
-    server_name _; \
-    location / { \
-        root /usr/share/nginx/html; \
-        index index.html; \
-        try_files $uri $uri/ /index.html; \
-    } \
-    location /health { \
-        access_log off; \
-        return 200 "ok"; \
-    } \
-    # Cache static assets \
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ { \
-        root /usr/share/nginx/html; \
-        expires 30d; \
-        add_header Cache-Control "public, no-transform"; \
-    } \
-}' > /etc/nginx/conf.d/default.conf
+# Copy custom nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Add healthcheck
-
+# Create runtime config script
+RUN echo '#!/bin/sh \n\
+if [ -n "$REACT_APP_API_URL" ]; then \n\
+  echo "window.ENV = { API_URL: \"$REACT_APP_API_URL\" };" > /usr/share/nginx/html/env-config.js; \n\
+  echo "Runtime config injected: API_URL=$REACT_APP_API_URL"; \n\
+else \n\
+  echo "window.ENV = { API_URL: \"http://facemap.railway.internal:5000\" };" > /usr/share/nginx/html/env-config.js; \n\
+  echo "Using default API URL: http://facemap.railway.internal:5000"; \n\
+fi \n\
+exec "$@"' > /docker-entrypoint.sh && \
+chmod +x /docker-entrypoint.sh
 
 # Expose port
 EXPOSE 80
 
-# Start nginx
+# Start nginx with our entrypoint script
+ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
