--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,24 +1,20 @@
 server {
-    listen 80;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name _;
     
     # Gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 10240;
     gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml application/javascript;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json application/xml;
     gzip_disable "MSIE [1-6]\.";
 
-    # Health check path
-    location = / {
-        root /usr/share/nginx/html;
-        try_files /health.html /index.html =200;
-    }
-
-    # Main location
+    # Root location
     location / {
         root /usr/share/nginx/html;
-        index index.html index.htm;
+        index index.html;
         try_files $uri $uri/ /index.html;
     }
 
@@ -27,5 +23,17 @@ server {
         root /usr/share/nginx/html;
         expires 30d;
         add_header Cache-Control "public, no-transform";
+    }
+    
+    # Pass API requests to the internal backend service
+    # This optional route permite fazer proxy para o backend se necessário
+    location /api/ {
+        proxy_pass http://facemap.railway.internal:5000/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        add_header Access-Control-Allow-Origin "*" always;
     }
 } 
