--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -28,17 +28,20 @@ COPY --from=build /app/build /usr/share/nginx/html
 # Copy custom nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Create runtime config script
-RUN echo '#!/bin/sh \n\
-if [ -n "$REACT_APP_API_URL" ]; then \n\
-  echo "window.ENV = { API_URL: \"$REACT_APP_API_URL\" };" > /usr/share/nginx/html/env-config.js; \n\
-  echo "Runtime config injected: API_URL=$REACT_APP_API_URL"; \n\
-else \n\
-  echo "window.ENV = { API_URL: \"http://facemap.railway.internal:5000\" };" > /usr/share/nginx/html/env-config.js; \n\
-  echo "Using default API URL: http://facemap.railway.internal:5000"; \n\
-fi \n\
-exec "$@"' > /docker-entrypoint.sh && \
-chmod +x /docker-entrypoint.sh
+# Create a proper entrypoint script
+COPY <<-"EOF" /docker-entrypoint.sh
+#!/bin/sh
+if [ -n "$REACT_APP_API_URL" ]; then
+  echo "window.ENV = { API_URL: \"$REACT_APP_API_URL\" };" > /usr/share/nginx/html/env-config.js
+  echo "Runtime config injected: API_URL=$REACT_APP_API_URL"
+else
+  echo "window.ENV = { API_URL: \"http://facemap.railway.internal:5000\" };" > /usr/share/nginx/html/env-config.js
+  echo "Using default API URL: http://facemap.railway.internal:5000"
+fi
+exec "$@"
+EOF
+
+RUN chmod +x /docker-entrypoint.sh
 
 # Expose port
 EXPOSE 80
