--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -25,15 +25,35 @@ server {
         add_header Cache-Control "public, no-transform";
     }
     
-    # Pass API requests to the internal backend service
-    # This optional route permite fazer proxy para o backend se necessário
-    location /api/ {
-        proxy_pass http://facemap.railway.internal:5000/;
+    # API Proxy - removido trailing slash para evitar problemas de rota
+    location /api {
+        # Remove o /api do caminho e passa para o backend
+        rewrite ^/api(.*)$ $1 break;
+        
+        # Proxy para o serviço interno do backend no Railway
+        proxy_pass http://facemap.railway.internal:5000;
+        
+        # Configurações padrão de proxy
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        add_header Access-Control-Allow-Origin "*" always;
+        
+        # Configuração CORS
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+        
+        # Tratamento especial para requisições OPTIONS (preflight CORS)
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
     }
 } 
